--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,7 @@
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 240, 250, 255;
   --background-end-rgb: 214, 219, 220;
+  --link-hover-rgb: 80, 180, 240;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -13,6 +14,7 @@
     --foreground-rgb: 240, 250, 255;
     --background-start-rgb: 20, 4, 30;
     --background-end-rgb: 12, 0, 24;
+    --link-hover-rgb: 80, 180, 240;
   }
 }
 
@@ -24,4 +26,8 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+
+  a:hover {
+    color: rgb(var(--link-hover-rgb));
+  }
 }
