--- a/app/globals.css
+++ b/app/globals.css
@@ -28,6 +28,24 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+h1,
+h2,
+h3 {
+  text-align: center;
+}
+
+h1 {
+  font-size: 1.5rem;
+}
+
+h2 {
+  font-size: 1.2rem;
+}
+
+h3 {
+  font-size: 1.1rem;
+}
+
 a:hover {
   color: rgb(var(--link-hover-rgb));
 }
